--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "repository": "",
   "author": "Alexandre Noble",
   "dependencies": {
-    "express": "~3.2.4"
+    "express": ">=3.11.0"
   }
 }
